# opencv-windows

./: .gitignore  CMakeLists.txt  README.md
FaceDetect/: FaceDetect.sln
FaceDetect/FaceDetect/: FaceDetect.vcxproj  FaceDetect.vcxproj.filters  main.cpp
FaceDetect/FaceDetect/Debug/: vc140.idb
FaceDetect/FaceDetect/Debug/FaceDetect.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FaceDetect.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FaceDetect/FaceDetect/x64/Debug/: vc140.idb
FaceDetect/FaceDetect/x64/Debug/FaceDetect.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FaceDetect.lastbuildstate
capture_faces/: CMakeLists.txt  README.md
capture_faces/src/: app.cpp  app.h  main.cpp
capture_faces/src/include/: app.h
cylinder_detection/: CMakeLists.txt
cylinder_detection/src/: main.cpp
detect_brightness/: CMakeLists.txt
detect_brightness/src/: app.cpp  main.cpp
draw_rect/: CMakeLists.txt
draw_rect/src/: main.cpp
draw_rect/src/include/: main.h
em_clustering/: CMakeLists.txt  main.cpp
em_clustering/include/: util.h
face_detection/: CMakeLists.txt
face_detection/src/: main.cpp
face_recognition/: CMakeLists.txt
face_recognition/src/: app.cpp  main.cpp
face_zoom/: CMakeLists.txt
face_zoom/src/: main.cpp
res/training_data/: data.csv  datanew.csv  generate_csv.py
resources/capture_faces/: settings.xml
src/: main.cpp
up_base/: CMakeLists.txt
up_base/src/: main.cpp  up_base.cpp  up_base.h
up_base/src/include/: common.hpp
webcam_to_video_file/: CMakeLists.txt
webcam_to_video_file/src/: app.cpp  main.cpp
